Conversion lessons and additonal comments

--- a/Pandas—Getting Started /0 - First Steps.ipynb
+++ b/Pandas—Getting Started /0 - First Steps.ipynb
@@ -590,6 +590,17 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dict_df3.loc[dict_df3[\"ints\"] > 3]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### iloc"
@@ -688,15 +699,6 @@
    "source": [
     "## The end"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
